fix cron upstart, should expect fork but doesn't start with that stanza also need to touch /etc/cron.d/libretime_watch on startup to load it kickstarter script logging

--- a/init-fake.conf
+++ b/init-fake.conf
@@ -10,6 +10,7 @@ script
         /sbin/initctl emit stopped JOB=udevtrigger --no-wait
         /sbin/initctl emit started JOB=udev --no-wait
         /sbin/initctl emit runlevel RUNLEVEL=3 --no-wait
+	touch /etc/cron.d/libretime_watch
 end script
 
 
